--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "nprogress": "^0.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-lazy-load-image-component": "^1.4.1",
     "react-stripe-checkout": "^2.6.3",
+    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
     "shortid": "^2.2.14",
     "stripe": "^7.5.0",
